# rust-cc

./: .gitignore  README.md  compose.yaml  hi.txt
.github/workflows/: integration.yaml
consisten_hashing_server/: Cargo.toml  Dockerfile
consisten_hashing_server/my-consistent-hashing/src/: consistent_hashing.rs
consisten_hashing_server/src/: main.rs
consistent_hashing_server/: Cargo.toml  Dockerfile  README.md
consistent_hashing_server/my-consistent-hashing/: Cargo.toml
consistent_hashing_server/my-consistent-hashing/src/: consistent_hashing.rs  consistent_hashing_faster.rs  identity_hasher.rs  lib.rs  main.rs  transaction.rs  vector_consistent_hashing.rs
consistent_hashing_server/my-consistent-hashing/tests/: con_hashing_test.rs
consistent_hashing_server/src/: ecs_functions.rs  exclusives.rs  lib.rs  main.rs  transaction.rs  utils.rs
nginx/: Dockerfile  nginx.conf
openresty/: .env  Dockerfile  README.md  nginx.conf
reader/: Cargo.toml  Dockerfile
reader/src/: main.rs
simple_server/: Cargo.toml  Dockerfile
simple_server/src/: main.rs
writer/: .env  Cargo.toml  Dockerfile
writer/src/: main.rs  transaction.rs
