[package]
name = "consisten_hashing_server"
version = "0.1.0"
edition = "2021"

[dependencies]
consistent_hasher = "0.1.1"
hostname = "0.4.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
my-consistent-hashing = { path = "./my-consistent-hashing" }
aws-sdk-config = "1.52.0"
aws-sdk-ecs = "1.56.1"
aws-config = "1.5.10"
