[package]
name = "consisten_hashing_server"
version = "0.1.0"
edition = "2021"

[dependencies]
consistent_hasher = "0.1.2"
hostname = "0.4.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-config = "1.52.0"
aws-sdk-ecs = "1.56.1"
aws-config = "1.5.10"
reqwest = { version = "0.12.9", features = ["json"] }
consistent-hashing-aa = "0.1.70"
